--- a/index.html
+++ b/index.html
@@ -8,9 +8,26 @@
     <title>Dropbox</title>
 </head>
 
-<body>
+<body class="debug">
     <!-- header -->
-    <header></header>
+    <header class="flex">
+
+        <div class="left-header flex">
+            <img src="./img/logo.svg" alt="">
+            <div class="link-left-header">
+                <a href="#">a</a>
+                <a href="#">a</a>
+                <a href="#">a</a>
+            </div>
+        </div>
+
+        <div class="right-header flex">
+            <a href="#">a</a>
+            <a href="#">a</a>
+            <a href="#">a</a>
+            <button>inizia</button>
+        </div>
+    </header>
 
     <main>
         <!-- home-page -->
