--- a/index.html
+++ b/index.html
@@ -31,7 +31,21 @@
 
     <main>
         <!-- home-page -->
-        <section></section>
+        <section class="home-page">
+
+            <!-- background home-page -->
+            <div class="bg-blu-home-page"></div>
+            <div class="bg-white-home-page"></div>
+
+            <!-- contenuto home-page -->
+            <div class="container-home-page">
+                <h1>lalalalala</h1>
+                <div class="text-foto-home-page flex">
+                    <div class="testo-btn">lore</div>
+                    <div class="img-home-page">s</div>
+                </div>
+            </div>
+        </section>
 
         <!-- piano business -->
         <section></section>
