--- a/index.html
+++ b/index.html
@@ -48,7 +48,23 @@
         </section>
 
         <!-- piano business -->
-        <section></section>
+        <section class="business-box w-60">
+
+            <!-- h1 + radio input -->
+            <form action="#">
+                <h1>dasdsads</h1>
+                <input type="radio">fdsfafd
+                <input type="radio">fdsfafd
+            </form>
+
+            <div class="business-choice flex">
+                <div class="business-singolo">lore</div>
+                <div class="business-advanced">a</div>
+                <div class="business-enterprise">a</div>
+            </div>
+
+            <div class="office-contact">s</div>
+        </section>
 
         <!-- trova partner -->
         <section></section>
