--- a/index.html
+++ b/index.html
@@ -100,7 +100,25 @@
                 <div class="business">a</div>
             </div>
 
-            <div class="office-contact"></div>
+            <div class="office-contact">
+                <p><i class="fa-solid fa-building"></i> Team</p>
+
+                <div class="inner-office-contact flex">
+
+                    <div class="left-inner-office-contact">
+                        <h2>Enterprise</h2>
+                        <span>Contatta l'uffico vendite per i prezzi</span>
+                        <p>Soluzioni personalizzate e supporto su misura per aiutare i professionsti IT nella gestione
+                            su qualsiasi scala.</p>
+                    </div>
+
+                    <div class="right-inner-office-contact">
+                        <button class="button-blue">Contatta l'ufficio vendita</button>
+                    </div>
+
+                </div>
+            </div>
+
         </section>
 
         <!-- trova partner -->
