--- a/index.html
+++ b/index.html
@@ -122,7 +122,18 @@
         </section>
 
         <!-- trova partner -->
-        <section></section>
+        <section class="find-partner w-55 flex">
+            <div class="left-box-50">
+                <img src="./img/item3.svg" alt="">
+            </div>
+            <div class="right-box-50 flex">
+                <h2>Entra in contatto con un partner Dropbox</h2>
+                <p>Trova partenr Dropbox e HelloSign di fiducia. Ottieni le soluzioni e i servizi necessari per
+                    raggiungere i tuoi obbiettivi aziendali, tra cui implementazione, integrazione, gestione e supporto
+                    continui.</p>
+                <button class="white-button">Trova un partner</button>
+            </div>
+        </section>
 
         <!-- cosa fa dropbox -->
         <section></section>
