--- a/index.html
+++ b/index.html
@@ -139,13 +139,24 @@
         <section></section>
 
         <!-- clienti dropbox -->
-        <section></section>
+        <section class="box-clienti w-55">
+            <h1>Più di 500.000 team utilizzano</h1>
+            <h1>Dropbox Business</h1>
+            <a href="#">Scopri di più sui nostri clienti</a>
+        </section>
 
         <!-- partnership -->
         <section></section>
 
         <!-- prova gratutita button -->
-        <section></section>
+        <section class="sez-prove">
+            <div class="free-prove w-55 flex">
+
+
+                <h1>Porta Dropbox Business nella tua azienda</h1>
+                <div><button class="white-button">Inizia la tua prova gratuita</button></div>
+            </div>
+        </section>
 
         <!-- info -->
         <section></section>
