--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     <header class="flex">
 
         <div class="left-header flex ">
-            <img src="./img/logo.svg" alt="logo">
+            <img src="./img/logo-small.png" alt="logo">
             <div class="link-left-header">
                 <a href="#">Perchè Dropbox</a>
                 <a href="#">Funzioni</a>
@@ -60,10 +60,11 @@
                         <a href="#"><i class="fa-solid fa-arrow-down"></i></a>
                     </div>
                     <div class="img-home-page">
-                        <img src="./img/item3.svg" alt="">
+                        <img src="./img/jumbo.png" alt="jumbo">
                     </div>
                 </div>
             </div>
+
         </section>
 
         <!-- piano business -->
@@ -77,29 +78,92 @@
             </form>
             <!-- flex container  -->
             <div class="business-choice flex">
-                <!-- card choice -->
+
+                <!-- card signolo -->
                 <div class="business">
+
                     <span class="destinatario"><i class="fa-solid fa-user"></i>Singolo</span>
+
                     <div class="inner-business flex">
                         <h2>Professional</h2>
-                        <span>£ 12.00</span>
+                        <span class="span-prezzo">£ 12.00</span>
                         <span class="span-grigio">/mese</span>
-                        <p><i class="fa-solid fa-user"></i>1 utente</p>
-                        <p><i class="fa-solid fa-folder"></i>5 TB di spazio di archiviazione </p>
-                        <p><i class="fa-solid fa-share-nodes"></i>Funzioni di produttività premium e condivisone file
-                            semplice e sicura</p>
+                        <p class="flex"><i class="fa-solid fa-user"></i>1 utente</p>
+                        <p class="flex"><i class="fa-solid fa-folder"></i>5 TB di spazio di archiviazione </p>
+                        <p class="flex"><i class="fa-solid fa-share-nodes"></i>Funzioni di produttività premium e
+                            condivisone file semplice e sicura</p>
                         <button class="button-blue">Prova gratis per 30 giorni</button>
                         <p>oppure <a href="#">acquista ora</a></p>
                         <span class="riga"></span>
                         <h4>Punti Salienti del piano</h4>
-                        <p><i class="fa-solid fa-check"></i>Invia file fino a 100GB con Dropbox Transfer</p>
-                        <p><i class="fa-solid fa-check"></i>Cartelle offline su dispositivi mobili</p>
+                        <p class="flex"><i class="fa-solid fa-check"></i>Invia file fino a 100GB con Dropbox Transfer
+                        </p>
+                        <p class="flex"><i class="fa-solid fa-check"></i>Cartelle offline su dispositivi mobili</p>
                     </div>
+
                 </div>
-                <div class="business">a</div>
-                <div class="business">a</div>
+
+                <!-- card advanced -->
+                <div class="business">
+
+                    <span class="destinatario"><i class="fa-solid fa-users"></i>Team</span>
+
+                    <div class="inner-business flex">
+                        <h2>Advanced</h2>
+                        <span class="span-prezzo">£ 18.00</span>
+                        <span class="span-grigio">/utente/mese</span>
+                        <p class="flex"><i class="fa-solid fa-user"></i>3 o più utente</p>
+                        <p class="flex"><i class="fa-solid fa-folder"></i>Tutto lo spazio per il team
+                        </p>
+                        <p class="flex"><i class="fa-solid fa-share-nodes"></i>Funzioni di produttività premium e
+                            condivisone file semplice e sicura</p>
+                        <button class="button-blue">Prova gratis per 30 giorni</button>
+                        <p>oppure <a href="#">acquista ora</a></p>
+                        <span class="riga"></span>
+                        <h4>Punti Salienti del piano</h4>
+                        <p class="flex"><i class="fa-solid fa-check"></i>Invia file a 100GB con Dropbox Transfer
+                        </p>
+                        <p class="flex"><i class="fa-solid fa-check"></i>Cartelle offline su dispositivi mobili</p>
+                        <p class="flex"><i class="fa-solid fa-check"></i>Risparmio del 50% rispetto alle iscrizioni
+                            singole</p>
+                        <p class="flex"><i class="fa-solid fa-check"></i>Possibilità di inserire nuovi membri del team
+                        </p>
+                        <p class="flex"><i class="fa-solid fa-check"></i>Gestione dei permessi in base ai ruoli</p>
+
+                    </div>
+
+                </div>
+
+                <!-- card azienda -->
+                <div class="business">
+
+                    <span class="destinatario"><i class="fa-solid fa-building"></i>Azienda</span>
+
+                    <div class="inner-business flex">
+                        <h2>Enterprise</h2>
+                        <span class="span-prezzo">Contattaci</span>
+                        <span class="span-grigio">-</span>
+                        <p class="flex"><i class="fa-solid fa-user"></i>10 o più utenti</p>
+                        <p class="flex"><i class="fa-solid fa-folder"></i>Soluzioni per la tua azienda
+                        </p>
+                        <p class="flex"><i class="fa-solid fa-share-nodes"></i>Funzioni di produttività premium e
+                            condivisone file semplice e sicura</p>
+                        <button class="button-blue">Prova gratis per 30 giorni</button>
+                        <p>oppure <a href="#">acquista ora</a></p>
+                        <span class="riga"></span>
+                        <h4>Punti Salienti del piano</h4>
+                        <p class="flex"><i class="fa-solid fa-check"></i>Cartelle offline su dispositivi mobili
+                        </p>
+                        <p class="flex"><i class="fa-solid fa-check"></i>Servizo assistenza 24/h</p>
+                        <p class="flex"><i class="fa-solid fa-check"></i>Possibilità di personalizzazione totale</p>
+
+                    </div>
+
+                </div>
+
             </div>
 
+            <!-- card office contact -->
             <div class="office-contact">
                 <p><i class="fa-solid fa-building"></i> Team</p>
 
@@ -123,10 +187,10 @@
 
         <!-- trova partner -->
         <section class="find-partner w-55 flex">
-            <div class="left-box-50">
-                <img src="./img/item3.svg" alt="">
+            <div class="left-box-60">
+                <img src="./img/partner.png" alt="partner">
             </div>
-            <div class="right-box-50 flex">
+            <div class="right-box-40 flex">
                 <h2>Entra in contatto con un partner Dropbox</h2>
                 <p>Trova partenr Dropbox e HelloSign di fiducia. Ottieni le soluzioni e i servizi necessari per
                     raggiungere i tuoi obbiettivi aziendali, tra cui implementazione, integrazione, gestione e supporto
@@ -135,8 +199,54 @@
             </div>
         </section>
 
-        <!-- cosa fa dropbox -->
-        <section></section>
+        <!-- operazioni dropbox -->
+        <section class="operazioni-drop w-55">
+            <h1>Esegui più operazioni con Dropbox Business</h1>
+            <div class="container-card flex">
+                <div class="inner-card">
+                    <img src="./img/business-feature-switching-tools.png" alt="foto">
+                    <h2>Passa di meno da uno strumento all'altro</h2>
+                    <p>Porta a termine le attività quotidiane con un solo strumento. Crea, modifica e condividi
+                        contenuti cloud da Documenti,Folgli e Presentazioni di Google, file Microsoft Office e Dropbox
+                        Paper direttamente da Dropbox</p>
+                </div>
+                <div class="inner-card">
+                    <img src="./img/business-feature-send-files-it.png" alt="foto">
+                    <h2>Passa di meno da uno strumento all'altro</h2>
+                    <p>Porta a termine le attività quotidiane con un solo strumento. Crea, modifica e condividi
+                        contenuti cloud da Documenti,Folgli e Presentazioni di Google, file Microsoft Office e Dropbox
+                        Paper direttamente da Dropbox</p>
+                </div>
+                <div class="inner-card">
+                    <img src="./img/business-feature-coordinate-it.png" alt="foto">
+                    <h2>Passa di meno da uno strumento all'altro</h2>
+                    <p>Porta a termine le attività quotidiane con un solo strumento. Crea, modifica e condividi
+                        contenuti cloud da Documenti,Folgli e Presentazioni di Google, file Microsoft Office e Dropbox
+                        Paper direttamente da Dropbox</p>
+                </div>
+                <div class="inner-card">
+                    <img src="./img/business-feature-integrations-it.png" alt="foto">
+                    <h2>Passa di meno da uno strumento all'altro</h2>
+                    <p>Porta a termine le attività quotidiane con un solo strumento. Crea, modifica e condividi
+                        contenuti cloud da Documenti,Folgli e Presentazioni di Google, file Microsoft Office e Dropbox
+                        Paper direttamente da Dropbox</p>
+                </div>
+                <div class="inner-card">
+                    <img src="./img/business-feature-multi-device.png" alt="foto">
+                    <h2>Passa di meno da uno strumento all'altro</h2>
+                    <p>Porta a termine le attività quotidiane con un solo strumento. Crea, modifica e condividi
+                        contenuti cloud da Documenti,Folgli e Presentazioni di Google, file Microsoft Office e Dropbox
+                        Paper direttamente da Dropbox</p>
+                </div>
+                <div class="inner-card">
+                    <img src="./img/business-feature-security.png" alt="foto">
+                    <h2>Passa di meno da uno strumento all'altro</h2>
+                    <p>Porta a termine le attività quotidiane con un solo strumento. Crea, modifica e condividi
+                        contenuti cloud da Documenti,Folgli e Presentazioni di Google, file Microsoft Office e Dropbox
+                        Paper direttamente da Dropbox</p>
+                </div>
+            </div>
+        </section>
 
         <!-- clienti dropbox -->
         <section class="box-clienti w-55">
@@ -149,14 +259,14 @@
         <section></section>
 
         <!-- prova gratutita button -->
-        <section class="sez-prove">
+        <!-- <section class="sez-prove">
             <div class="free-prove w-55 flex">
 
 
                 <h1>Porta Dropbox Business nella tua azienda</h1>
                 <div><button class="white-button">Inizia la tua prova gratuita</button></div>
             </div>
-        </section>
+        </section> -->
 
         <!-- info -->
         <section></section>
