--- a/index.html
+++ b/index.html
@@ -256,20 +256,78 @@
         </section>
 
         <!-- partnership -->
-        <section></section>
+        <section class="partner-box flex">
+            <div class="box-3 flex">
+                <div class="partnership-img flex bg-verde-acqua"><img src="./img/designit.svg" alt=""></div>
+                <div class="partnership-img flex bg-marrone-rosso"><img src="./img/arizona_state_university.svg" alt="">
+                </div>
+                <div class="partnership-img flex bg-azzurro"><img src="./img/university_of_florida.svg" alt=""></div>
+                <div class="partnership-img flex bg-rosso"><img src="./img/topps.svg" alt=""></div>
+            </div>
+            <div class="center-partner-box box-3">
+                <img class="center-img" src="./img/designit.svg" alt="">
+                <div class="riga"></div>
+                <p>"I membri del nostro team lavorano costantemente in Paesi,fuori orari e uffici diversi. Ora molte
+                    soluzioni sono compatibili con queste esigenze, ma nessuna è facile quanto Dropbox Paper. Ora molte
+                    soluzioni sono compatibili con queste esigenze, ma nessuna è facile quanto Dropbox Paper"</p>
+                <span id="autore">Morten Thomas,Global IT Lead</span>
+            </div>
+            <div class="box-3 flex">
+                <div class="partnership-img flex bg-rosso"><img src="./img/world_bicycle_relief.svg" alt=""></div>
+                <div class="partnership-img flex bg-azzurro-chiaro"><img src="./img/hearst_corp.svg" alt="">
+                </div>
+                <div class="partnership-img flex bg-blue"><img src="./img/lonely_planet.svg" alt=""></div>
+                <div class="partnership-img flex bg-giallo"><img src="./img/clear_channel.svg" alt=""></div>
+            </div>
+        </section>
 
         <!-- prova gratutita button -->
-        <!-- <section class="sez-prove">
+        <section class="box-prova bg-azzurro-chiaro">
             <div class="free-prove w-55 flex">
-
-
                 <h1>Porta Dropbox Business nella tua azienda</h1>
                 <div><button class="white-button">Inizia la tua prova gratuita</button></div>
             </div>
-        </section> -->
+        </section>
 
         <!-- info -->
-        <section></section>
+        <section class="info-box w-55">
+            <h1>Domande frequenti</h1>
+
+
+            <div class="answer-box ">
+                <div class="domanda flex">
+                    <p>Qual'è la differenza tra Dropbox Business Standard e Dropbox Business </p>
+                    <i class="fa-solid fa-chevron-down"></i>
+                </div>
+                <div class="risposta">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Repellat ab recusandae
+                    expedita harum quo. Perspiciatis rerum ut excepturi porro aut iusto dolorem at, suscipit,
+                    accusantium, earum molestiae modi maxime eligendi.</div>
+            </div>
+
+
+            <div class="answer-box ">
+                <div class="domanda flex">
+                    <p>Qual'è la differenza tra Dropbox Business Standard e Dropbox Business </p>
+                    <i class="fa-solid fa-chevron-down"></i>
+                </div>
+                <div class="risposta">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Repellat ab recusandae
+                    expedita harum quo. Perspiciatis rerum ut excepturi porro aut iusto dolorem at, suscipit,
+                    accusantium, earum molestiae modi maxime eligendi.</div>
+            </div>
+
+
+            <div class="answer-box border-bottom">
+                <div class="domanda flex">
+                    <p>Qual'è la differenza tra Dropbox Business Standard e Dropbox Business </p>
+                    <i class="fa-solid fa-chevron-down"></i>
+                </div>
+                <div class="risposta">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Repellat ab recusandae
+                    expedita harum quo. Perspiciatis rerum ut excepturi porro aut iusto dolorem at, suscipit,
+                    accusantium, earum molestiae modi maxime eligendi.</div>
+            </div>
+
+
+        </section>
 
     </main>
 
