--- a/index.html
+++ b/index.html
@@ -331,7 +331,53 @@
 
     </main>
 
-    <footer></footer>
+    <footer>
+        <div class="inner-footer flex">
+            <div class="colonna-footer">
+                <h3>Dropbox</h3>
+                <a href="#">Applicazioni dekstop</a>
+                <a href="#">Perchè Dropbox</a>
+                <a href="#">Piani</a>
+                <a href="#">Sicurezza</a>
+                <a href="#">Funzioni</a>
+            </div>
+            <div class="colonna-footer">
+                <h3>Prodotti</h3>
+                <a href="#">Applicazioni dekstop</a>
+                <a href="#">Perchè Dropbox</a>
+                <a href="#">Piani</a>
+                <a href="#">Sicurezza</a>
+                <a href="#">Funzioni</a>
+            </div>
+            <div class="colonna-footer">
+                <h3>Azienda</h3>
+                <a href="#">Applicazioni dekstop</a>
+                <a href="#">Perchè Dropbox</a>
+                <a href="#">Piani</a>
+                <a href="#">Sicurezza</a>
+                <a href="#">Funzioni</a>
+            </div>
+            <div class="colonna-footer">
+                <h3>Supporto</h3>
+                <a href="#">Applicazioni dekstop</a>
+                <a href="#">Perchè Dropbox</a>
+                <a href="#">Piani</a>
+                <a href="#">Sicurezza</a>
+                <a href="#">Funzioni</a>
+            </div>
+            <div class="colonna-footer">
+                <h3>Community</h3>
+                <a href="#">Applicazioni dekstop</a>
+                <a href="#">Perchè Dropbox</a>
+                <a href="#">Piani</a>
+                <a href="#">Sicurezza</a>
+                <a href="#">Funzioni</a>
+            </div>
+        </div>
+
+        <div class="riga-footer"></div>
+        <p><i class="fa-solid fa-earth-americas"></i> Italiano <i class="fa-solid fa-caret-up"></i></p>
+    </footer>
 
 
 </body>
