--- a/index.html
+++ b/index.html
@@ -14,12 +14,13 @@
     <title>Dropbox</title>
 </head>
 
-<body class="debug">
+<body>
+
     <!-- header -->
     <header class="flex">
 
         <div class="left-header flex ">
-            <img src="./img/logo-small.png" alt="logo">
+            <img id="logo-dropbox" src="./img/logo-small.png" alt="logo">
             <div class="link-left-header">
                 <a href="#">Perchè Dropbox</a>
                 <a href="#">Funzioni</a>
@@ -41,15 +42,10 @@
     <main>
         <!-- home-page -->
         <section class="home-page">
-
-            <!-- background home-page -->
-            <div class="bg-blu-home-page"></div>
-            <div class="bg-white-home-page"></div>
-
             <!-- contenuto home-page -->
             <div class="container-home-page">
                 <h1>Tutto ciò che ti serve per il lavoro, in un unico posto</h1>
-                <div class="bottom-home-page flex">
+                <div class="flex">
                     <div class="text-btn-home-page">
                         <p>Finalmente tutti i tuoi strumenti,contenuti e collaboratori sono accessibili dallo stesso
                             posto.</p>
@@ -57,18 +53,20 @@
                             integrato per ottimizare il flusso di lavoro</p>
                         <button class="button-blue">Inizia la tua prova gratuita</button>
                         <a href="#">Annulla in qualsiasi momento</a>
-                        <a href="#"><i class="fa-solid fa-arrow-down"></i></a>
+                        <a href="#footer"><i class="fa-solid fa-arrow-down"></i></a>
                     </div>
                     <div class="img-home-page">
                         <img src="./img/jumbo.png" alt="jumbo">
                     </div>
                 </div>
             </div>
-
         </section>
 
+        <!-- bg-white home page -->
+        <div class="separatore"></div>
+
         <!-- piano business -->
-        <section class="business-box w-55">
+        <section class="w-55">
 
             <!-- h1 + radio input -->
             <form action="#">
@@ -257,12 +255,28 @@
 
         <!-- partnership -->
         <section class="partner-box flex">
+
             <div class="box-3 flex">
-                <div class="partnership-img flex bg-verde-acqua"><img src="./img/designit.svg" alt=""></div>
-                <div class="partnership-img flex bg-marrone-rosso"><img src="./img/arizona_state_university.svg" alt="">
+                <div class="partnership bg-verde-acqua">
+                    <div class="inner-partnership">
+                        <img src="./img/designit.svg" alt="">
+                    </div>
                 </div>
-                <div class="partnership-img flex bg-azzurro"><img src="./img/university_of_florida.svg" alt=""></div>
-                <div class="partnership-img flex bg-rosso"><img src="./img/topps.svg" alt=""></div>
+                <div class="partnership bg-marrone-rosso">
+                    <div class="inner-partnership">
+                        <img src="./img/arizona_state_university.svg" alt="">
+                    </div>
+                </div>
+                <div class="partnership bg-azzurro">
+                    <div class="inner-partnership">
+                        <img src="./img/university_of_florida.svg" alt="">
+                    </div>
+                </div>
+                <div class="partnership bg-rosso">
+                    <div class="inner-partnership">
+                        <img src="./img/topps.svg" alt="">
+                    </div>
+                </div>
             </div>
             <div class="center-partner-box box-3">
                 <img class="center-img" src="./img/designit.svg" alt="">
@@ -273,11 +287,26 @@
                 <span id="autore">Morten Thomas,Global IT Lead</span>
             </div>
             <div class="box-3 flex">
-                <div class="partnership-img flex bg-rosso"><img src="./img/world_bicycle_relief.svg" alt=""></div>
-                <div class="partnership-img flex bg-azzurro-chiaro"><img src="./img/hearst_corp.svg" alt="">
+                <div class="partnership bg-rosso">
+                    <div class="inner-partnership">
+                        <img src="./img/world_bicycle_relief.svg" alt="">
+                    </div>
                 </div>
-                <div class="partnership-img flex bg-blue"><img src="./img/lonely_planet.svg" alt=""></div>
-                <div class="partnership-img flex bg-giallo"><img src="./img/clear_channel.svg" alt=""></div>
+                <div class="partnership bg-azzurro-chiaro">
+                    <div class="inner-partnership">
+                        <img src="./img/hearst_corp.svg" alt="">
+                    </div>
+                </div>
+                <div class="partnership bg-blue">
+                    <div class="inner-partnership">
+                        <img src="./img/lonely_planet.svg" alt="">
+                    </div>
+                </div>
+                <div class="partnership bg-giallo">
+                    <div class="inner-partnership">
+                        <img src="./img/clear_channel.svg" alt="">
+                    </div>
+                </div>
             </div>
         </section>
 
@@ -332,10 +361,11 @@
     </main>
 
     <footer>
+        <a name="footer"></a>
         <div class="inner-footer flex">
             <div class="colonna-footer">
                 <h3>Dropbox</h3>
-                <a href="#">Applicazioni dekstop</a>
+                <a href="100">Applicazioni dekstop</a>
                 <a href="#">Perchè Dropbox</a>
                 <a href="#">Piani</a>
                 <a href="#">Sicurezza</a>
